# autophage

./: .envrc  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: cd.yml
src/: App.tsx  action.rs  adapter.rs  app.rs  cli.rs  components.rs  logging.rs  main.rs  models.rs  tui.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  core.rs  lib.rs  main.rs
src-tauri/src/core/: errors.rs  models.rs  session.rs
src/app/: adapter.rs  models.rs  ui.rs
src/components/: home.rs
src/components/home/: decompilation_viewer.rs  disassembly_viewer.rs  function_list_viewer.rs  viewer.rs
theme/: template.tmTheme
